# speech-snap

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh  start_ydotoold.sh
src/: app.py  main.py  protocols.py
src/audio/: recorder.py
src/config/: Config.py  Paths.py  __init__.py
src/keyboard/: __init__.py  listener.py  typer.py
src/storage/: __init__.py  text_storage.py
src/stt/: whisper_stt.py
